# bears-full-stack

./: Cargo.toml  writing.db
src/: lib.rs  main.rs
src/controller/: fileserv.rs  get_samples.rs  mod.rs
src/controller/apis/: mod.rs  urmom.rs  writing_sample_handler.rs
src/model/: database.rs  mod.rs
src/model/database/: bears-portfolio.db  connection.rs  mod.rs  samples.rs  utils.rs
src/view/: app.rs  mod.rs
src/view/components/: carousel.rs  display_card.rs  layout_items.rs  mod.rs  sample_form.rs  sample_items.rs
src/view/pages/: contact.rs  home.rs  mod.rs  playground.rs  portfolio.rs  resume.rs
src/view/styling/: colors.scss  main.scss
src/view/styling/component_style/: carousel.scss  displaycards.scss  layout_items.scss
src/view/styling/page_styling/: home.scss  pages.scss
